# ccon

./: .gitignore  CMakeLists.txt  README.md  [SubtitleTools.com] CMakeLists.txt  ccon.cpp
.github/workflows/: build-binaries.yml  build-installers.yml  build-win32.yml  build-win64.yml  build.yml  build_installers.yml  build_win64.yml  gcc-build.yml
.github/workflows/build-win32/: action.yml
Installer/: EnVar.txt  ccon-installer-script.nsi  setup.nsi
src/: ErrorExit.cpp  ErrorExit.h  ccon.cpp  main.cpp
